added final changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/logo.png">
 </head>
 <body>
     <!-- Navigation -->
@@ -111,13 +112,13 @@
                 <div class="about-image">
                     <div class="profile-card">
                         <div class="profile-avatar">
-                            <i class="fas fa-user"></i>
-                        </div>
+      <img src="images/logo.png" alt="Profile">
+    </div>
                         <h3>Solanki Parin</h3>
                         <p>Game Programmer</p>
                         <div class="social-links">
-                            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/solanki-parin" class="social-link"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/parin-solanki-6b7133236/" class="social-link"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -132,88 +133,41 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250/2a2a2a/ffffff?text=Cyberpunk+RPG" alt="Cyberpunk RPG">
+                        <img src="images/rpg.png" alt="Turn based RPG">
                         <div class="project-overlay">
                             <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-play"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                                <a href="https://drive.google.com/file/d/1UN5vObUqEMN8VBcB2Onq8GRFjmb7Uumh/view?usp=sharing" class="project-link"><i class="fas fa-play"></i></a>
+                                <a href="https://drive.google.com/file/d/10Vr8hcF58BujOOL9nunD77ElwLqloK0-/view?usp=sharing" class="project-link"><i class="fas fa-file"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Cyberpunk RPG</h3>
-                        <p>An open-world RPG featuring advanced AI systems, dynamic weather, and procedurally generated quests. Built with Unreal Engine 5 and custom C++ systems.</p>
+                        <h3>Turn Based RPG</h3>
+                        <p>Built a simple turn-based RPG prototype in Unreal Engine 5 with a basic custom ability system and a UI for turn order and ability selection. The prototype focuses on core mechanics such as taking turns, using abilities, and showing results through a clean interface.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">Unreal Engine 5</span>
+                            <span class="tech-tag">Gameplay ability</span>
                             <span class="tech-tag">C++</span>
+                            <span class="tech-tag">UI</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/cardgame.png" alt="CCG Toolkit">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://drive.google.com/file/d/13drvIuoemiIVzTtcXXOV3WslOZykyil7/view?usp=sharing" class="project-link"><i class="fas fa-play"></i></a>
+                                <a href="https://drive.google.com/file/d/1mPebUzxcVgS0N0-vd266N11qdIdXCA3m/view?usp=sharing" class="project-link"><i class="fas fa-file"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>CCG Toolkit</h3>
+                        <p>Worked on modifying an existing CCG (Collectible Card Game) Toolkit in Unreal Engine. Implementing feature changes with new gameplay functionality, and resolving bugs to improve stability and user experience. Delivering tailored solutions to match project goals and supported smooth integration of custom mechanics.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Blueprint</span>
                             <span class="tech-tag">AI</span>
-                            <span class="tech-tag">Networking</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250/2a2a2a/ffffff?text=Multiplayer+FPS" alt="Multiplayer FPS">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-play"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Multiplayer FPS</h3>
-                        <p>Fast-paced multiplayer shooter with advanced weapon systems, player progression, and real-time networking. Features custom matchmaking and anti-cheat systems.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Unreal Engine 4</span>
-                            <span class="tech-tag">C++</span>
-                            <span class="tech-tag">Networking</span>
-                            <span class="tech-tag">Multiplayer</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250/2a2a2a/ffffff?text=VR+Adventure" alt="VR Adventure">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-play"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>VR Adventure Game</h3>
-                        <p>Immersive VR experience with hand tracking, physics interactions, and spatial audio. Optimized for high frame rates and low latency.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Unreal Engine 5</span>
-                            <span class="tech-tag">VR</span>
-                            <span class="tech-tag">Physics</span>
-                            <span class="tech-tag">Audio</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://via.placeholder.com/400x250/2a2a2a/ffffff?text=Procedural+World" alt="Procedural World">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fas fa-play"></i></a>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Procedural World Generator</h3>
-                        <p>Advanced procedural generation system creating infinite worlds with biomes, weather systems, and dynamic ecosystems. Built with custom algorithms and optimization techniques.</p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Unreal Engine 5</span>
-                            <span class="tech-tag">Procedural</span>
-                            <span class="tech-tag">Optimization</span>
-                            <span class="tech-tag">Algorithms</span>
                         </div>
                     </div>
                 </div>
@@ -229,116 +183,28 @@
                 <div class="plugin-card">
                     <div class="plugin-header">
                         <div class="plugin-icon">
-                            <i class="fas fa-robot"></i>
+                           <i class="fas fa-mountain"></i>
                         </div>
                         <div class="plugin-info">
-                            <h3>Advanced AI Behavior Tree</h3>
-                            <div class="plugin-rating">
+                            <h3>Quick Level Opener</h3>
+                            <!-- <div class="plugin-rating">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <span>(127 reviews)</span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                    <p>Comprehensive AI behavior tree system with advanced decision making, pathfinding, and squad coordination. Perfect for RTS and strategy games.</p>
+                    <p>Developed an Unreal Engine editor plugin that lists all maps from the content folder in a dropdown menu, making it easier for developers to quickly open and switch between maps during development.</p>
                     <div class="plugin-features">
-                        <span class="feature-tag">Behavior Trees</span>
-                        <span class="feature-tag">Pathfinding</span>
-                        <span class="feature-tag">Squad AI</span>
+                        <span class="feature-tag">Unreal Editor</span>
+                        <span class="feature-tag">C++</span>
                     </div>
                     <div class="plugin-footer">
-                        <span class="plugin-price">$29.99</span>
-                        <a href="#" class="btn btn-small">View Plugin</a>
-                    </div>
-                </div>
-
-                <div class="plugin-card">
-                    <div class="plugin-header">
-                        <div class="plugin-icon">
-                            <i class="fas fa-network-wired"></i>
-                        </div>
-                        <div class="plugin-info">
-                            <h3>Multiplayer Framework</h3>
-                            <div class="plugin-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>(89 reviews)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <p>Complete multiplayer solution with lobby system, matchmaking, player synchronization, and anti-cheat protection.</p>
-                    <div class="plugin-features">
-                        <span class="feature-tag">Networking</span>
-                        <span class="feature-tag">Matchmaking</span>
-                        <span class="feature-tag">Anti-Cheat</span>
-                    </div>
-                    <div class="plugin-footer">
-                        <span class="plugin-price">$49.99</span>
-                        <a href="#" class="btn btn-small">View Plugin</a>
-                    </div>
-                </div>
-
-                <div class="plugin-card">
-                    <div class="plugin-header">
-                        <div class="plugin-icon">
-                            <i class="fas fa-cogs"></i>
-                        </div>
-                        <div class="plugin-info">
-                            <h3>Inventory System Pro</h3>
-                            <div class="plugin-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                                <span>(203 reviews)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <p>Advanced inventory system with drag-and-drop, crafting, equipment slots, and save/load functionality. Highly customizable and optimized.</p>
-                    <div class="plugin-features">
-                        <span class="feature-tag">Inventory</span>
-                        <span class="feature-tag">Crafting</span>
-                        <span class="feature-tag">UI</span>
-                    </div>
-                    <div class="plugin-footer">
-                        <span class="plugin-price">$19.99</span>
-                        <a href="#" class="btn btn-small">View Plugin</a>
-                    </div>
-                </div>
-
-                <div class="plugin-card">
-                    <div class="plugin-header">
-                        <div class="plugin-icon">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <div class="plugin-info">
-                            <h3>Performance Profiler</h3>
-                            <div class="plugin-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>(67 reviews)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <p>Real-time performance monitoring tool with detailed analytics, bottleneck detection, and optimization recommendations.</p>
-                    <div class="plugin-features">
-                        <span class="feature-tag">Profiling</span>
-                        <span class="feature-tag">Analytics</span>
-                        <span class="feature-tag">Optimization</span>
-                    </div>
-                    <div class="plugin-footer">
-                        <span class="plugin-price">$39.99</span>
-                        <a href="#" class="btn btn-small">View Plugin</a>
+                        <span class="plugin-price">Free</span>
+                        <a href="https://www.fab.com/listings/25d795e7-6c78-482a-af6b-ecf8b56507c4" class="btn btn-small">View Plugin</a>
                     </div>
                 </div>
             </div>
@@ -356,22 +222,13 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>alex.chen@gameprogrammer.com</span>
+                            <span>solankiparin57378@gmail.com</span>
                         </div>
-                        <!--<div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>San Francisco, CA</span>
-                        </div>
-                        -->
                     </div>
                     <div class="social-links-large">
-                        <a href="#" class="social-link-large"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link-large"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link-large"><i class="fab fa-youtube"></i></a>
+                        <a href="https://github.com/solanki-parin" class="social-link-large"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/parin-solanki-6b7133236/" class="social-link-large"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/@UnrealExplorers-spd" class="social-link-large"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -398,9 +255,9 @@
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <div class="footer-social">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://github.com/solanki-parin"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/parin-solanki-6b7133236/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/@UnrealExplorers-spd"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
