Made responsive for android and removed code part for mobile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>I'm a passionate Unreal Engine game programmer with over 2.5 years of experience creating interactive experiences. I specialize in C++ programming, Blueprint systems, and developing marketplace plugins that help other developers bring their visions to life.</p>
-                    <p>My expertise includes gameplay programming, AI systems, networking, optimization, and creating reusable plugin architectures. I love solving complex technical challenges and pushing the boundaries of what's possible in Unreal Engine.</p>
+                    <p>My expertise includes gameplay programming, networking, optimization, and creating reusable plugin architectures. I love solving complex technical challenges and pushing the boundaries of what's possible in Unreal Engine.</p>
                     <div class="skills">
                         <h3>Technical Skills</h3>
                         <div class="skill-tags">
@@ -222,7 +222,7 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>solankiparin57378@gmail.com</span>
+                            <span>solankiparin78@gmail.com</span>
                         </div>
                     </div>
                     <div class="social-links-large">
