Added profile picture

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="about-image">
                     <div class="profile-card">
                         <div class="profile-avatar">
-      <img src="images/logo.png" alt="Profile">
+      <img src="images/Profile.jpg" alt="Profile">
     </div>
                         <h3>Solanki Parin</h3>
                         <p>Game Programmer</p>
