Removed extra semicolon

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I'm a passionate Unreal Engine game programmer with over 2.5 years of experience creating interactive experiences. I specialize in C++ programming, Blueprint systems, and developing marketplace plugins that help other developers bring their visions to life.</p>
+                    <p>I'm a passionate Unreal Engine game programmer with over 2.5 years of experience creating interactive experiences. I specialize in C++ programming, Blueprint systems and developing marketplace plugins that help other developers bring their visions to life.</p>
                     <p>My expertise includes gameplay programming, networking, optimization, and creating reusable plugin architectures. I love solving complex technical challenges and pushing the boundaries of what's possible in Unreal Engine.</p>
                     <div class="skills">
                         <h3>Technical Skills</h3>
